WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203774
WKWebView can get stuck blank (Web Content process thinks the app is backgrounded)
https://bugs.webkit.org/show_bug.cgi?id=203774
Summary
WKWebView can get stuck blank (Web Content process thinks the app is backgrou...
Tim Horton
Reported
2019-11-01 17:41:50 PDT
WKWebView can get stuck blank (Web Content process thinks the app is backgrounded)
Attachments
Patch
(8.98 KB, patch)
2019-11-01 17:56 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(30.44 KB, patch)
2019-11-03 01:32 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(30.45 KB, patch)
2019-11-03 01:33 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-11-01 17:56:13 PDT
Created
attachment 382666
[details]
Patch
Tim Horton
Comment 2
2019-11-01 17:56:26 PDT
<
rdar://problem/53399054
>
Tim Horton
Comment 3
2019-11-01 17:57:34 PDT
Going to see if I can write an API test. I have a reproducing test app, so it should be possible.
Tim Horton
Comment 4
2019-11-03 01:32:38 PST
Created
attachment 382701
[details]
Patch
Tim Horton
Comment 5
2019-11-03 01:33:47 PST
Created
attachment 382702
[details]
Patch
Tim Horton
Comment 6
2019-11-03 10:30:35 PST
Added a version with a test. The change itself had an r+ from Andy; can someone please review the test?
Chris Dumez
Comment 7
2019-11-03 10:33:40 PST
Comment on
attachment 382702
[details]
Patch Test r=me
WebKit Commit Bot
Comment 8
2019-11-03 12:34:57 PST
Comment on
attachment 382702
[details]
Patch Clearing flags on attachment: 382702 Committed
r251976
: <
https://trac.webkit.org/changeset/251976
>
WebKit Commit Bot
Comment 9
2019-11-03 12:34:59 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug