Tools/TestWebKitAPI/cocoa/TestNavigationDelegate.h
@@ -48,4 +48,5 @@
 @interface WKWebView (TestWebKitAPIExtras)
 - (void)_test_waitForDidStartProvisionalNavigation;
 - (void)_test_waitForDidFinishNavigation;
+- (void)_test_waitForDidFinishNavigationWithoutPresentationUpdate;
 @end
