Tools/TestWebKitAPI/cocoa/TestNavigationDelegate.mm
@@ -140,6 +140,17 @@
     self.navigationDelegate = nil;
 }
 
+- (void)_test_waitForDidFinishNavigationWithoutPresentationUpdate
+{
+    EXPECT_FALSE(self.navigationDelegate);
+
+    auto navigationDelegate = adoptNS([[TestNavigationDelegate alloc] init]);
+    self.navigationDelegate = navigationDelegate.get();
+    [navigationDelegate waitForDidFinishNavigation];
+
+    self.navigationDelegate = nil;
+}
+
 - (void)_test_waitForDidFinishNavigation
 {
     EXPECT_FALSE(self.navigationDelegate);
